--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="مواقع إلكترونية جاهزة واحترافية ابتداءً من 5000 دج فقط مع تسليم خلال 24 ساعة">
     <meta property="og:title" content="اطلب موقعك بـ 5000 دج فقط!">
     <meta property="og:description" content="مواقع جاهزة خلال 24 ساعة، تصميم احترافي ودعم كامل.">
-    <meta property="og:image" content="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80">
+    <meta property="og:image" content="https://ash-coding.onrender.com/static/images/A.png">
     <meta property="og:url" content="https://builtin60seconds.com">
     <meta property="og:type" content="website">
     <link rel="icon" href="static/images/A.png" type="image/png">
