--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="اطلب موقعك بـ 5000 دج فقط!">
     <meta property="og:description" content="مواقع جاهزة خلال 24 ساعة، تصميم احترافي ودعم كامل.">
     <meta property="og:image" content="https://ash-coding.onrender.com/static/images/A.png">
-    <meta property="og:url" content="https://builtin60seconds.com">
+    <meta property="og:url" content="https://ash-coding.onrender.com">
     <meta property="og:type" content="website">
     <link rel="icon" href="static/images/A.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
